Fixed aligning for responsive

--- a/src/sass/_raceDetails.scss
+++ b/src/sass/_raceDetails.scss
@@ -249,10 +249,6 @@
 
                 td {
                     padding: 10px 8px;
-
-                    span {
-                        justify-content: center;
-                    }
                 }
             }
         }
@@ -278,10 +274,6 @@
             td {
                 padding: 10px 8px !important;
                 font-size: 14px;
-
-                span {
-                    justify-content: center;
-                }
             }
         }
     }
