--- a/src/sass/_teamDetails.scss
+++ b/src/sass/_teamDetails.scss
@@ -193,10 +193,6 @@
 
                 td {
                     padding: 10px 8px;
-
-                    span {
-                        justify-content: center;
-                    }
                 }
 
             }
