--- a/src/sass/_teams.scss
+++ b/src/sass/_teams.scss
@@ -114,10 +114,6 @@
 
                     td {
                         padding: 10px 8px;
-
-                        span {
-                            justify-content: center;
-                        }
                     }
 
                 }
